--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,3 +1,4 @@
+{% load bag_tools %}
 <div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
     <div class="arrow-up arrow-success"></div>
     <div class="w-100 toast-capper bg-success"></div>
@@ -24,8 +25,10 @@
                         </div>
                         <div class="col-9">
                             <p class="my-0"><strong>{{ item.product.title }}</strong></p>
-                            <p class="my-0 small">Price Each: £{{ item.product.price }}</p>
+                            <p class="my-0 small text-muted">Price Each: £{{ item.product.price }}</p>
                             <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
+                            <p class="my-0 small">Total: £{{ item.product.price | calc_subtotal:item.quantity }}</p>
+
                         </div>
                     </div>
                 {% endfor %}
