--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -36,6 +36,24 @@
     border: 1px solid #000;
 }
 
+select,
+select option {
+    color: #000000;
+    border: 1px solid #000;
+    box-sizing: border-box;
+    height: 40px;
+    padding: 10px 12px;
+}
+
+select:invalid,
+select option[value=""] {
+    color: #aab7c4 !important;
+    border: 1px solid #000;
+    box-sizing: border-box;
+    height: 40px;
+    padding: 10px 12px;
+}
+
 #loading-overlay {
 	display: none;
 	position: fixed;
