--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -23,5 +23,45 @@
                 <hr>
             </div>
         </div>
-        {{ profile }}
+        <div class="row">
+            <div class="col-12">
+                <p class="font-weight-bold">Hello {{ user.username }},</p>
+            </div>
+            <div class="col-12">
+                <p>
+                    Here you can find your order history and order confirmations.
+                    You can also update your default delivery information.
+                    To view your wishlist, click the button below:
+                </p>
+                <!-- View Wishlist link -->
+                <div class="col pl-0">
+                    <a href="" class="btn btn-color rounded-0 text-uppercase mt-1">
+                        <span class="icon">
+                            <i class="fa-solid fa-book-bookmark"></i>
+                        </span>
+                    <span class="text-uppercase">Wish list</span>
+                    </a>
+                </div>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <p class="text-muted">Default Delivery Information</p>
+                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="btn btn-color rounded-0 text-uppercase float-right">Update Information</button>
+                </form>
+            </div>
+            <div class="col-12 col-lg-6">
+                <p class="text-muted">Order History</p>
+                {{ orders }}
+            </div>
+        </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock %}
