--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -32,7 +32,13 @@
                         {% endif %}
                     {% endfor %}
                     <hr>
-                    {{ form | crispy }}
+                    {% for field in form %}
+                        {% if field.name != 'image' %}
+                            {{ field | as_crispy_field }}
+                        {% else %}
+                            {{ field }}
+                        {% endif %}
+                    {% endfor %}
                     <div class="text-right">
                         <a class="btn btn-outline-color rounded-0" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-color rounded-0" type="submit">Add Book</button>
@@ -42,4 +48,14 @@
               
         </div>
     </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('#new-image').change(function() {
+            var file = $('#new-image')[0].files[0];
+            $('#filename').text(`Image will be set to: ${file.name}`);
+        });
+    </script>
 {% endblock %}
