--- a/static/css/base.css
+++ b/static/css/base.css
@@ -328,6 +328,16 @@ input[name='q']::placeholder {
     border-radius: 0;
 }
 
+/* Featured author */
+#featured {
+    padding: 20px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    border: #BE7A07 solid 2px;
+    border-radius: 5px; 
+    font-weight: bolder;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
