--- a/templates/includes/main_nav.html
+++ b/templates/includes/main_nav.html
@@ -20,7 +20,7 @@
                 Other
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Our Author of the Month</a>
+                <a href="{% url 'featured_author' %}" class="dropdown-item">Our Author of the Month</a>
                 <a href="{% url 'contact_us' %}" class="dropdown-item">Contact Us</a>
             </div>
         </li>
