--- a/bag/templates/bag/item_quantity.html
+++ b/bag/templates/bag/item_quantity.html
@@ -18,6 +18,8 @@
                 <button class="increment-qty btn btn-sm btn-color rounded-0 
                                 increment-qty_{{ item.item_id }}"
                     data-item_id="{{ item.item_id }}">
+                    <span>
+                        <i class="fas fa-plus fa-sm"></i>
                     </span>
                 </button>
             </div>
