--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,15 +1,14 @@
 {% load static %}
 
-  <footer class="footer">
+  <footer class="footer bg-white">
     <hr>
-    <div class="row text-center">
-        <div class="justify-content-center w-auto text-muted text-color">
-            <h2>Subscribe!</h2>
+    <div class="text-center">
+        <div class="text-muted text-color">
             <p>Get exclusive offers and discount codes by subscribing to our monthly newsletter</p>
            <!-- Mailchimp signup form here -->
         </div>
     </div>
-    <div class="row text-center">
+    <div class="text-center">
         <p class="m-0 text-center text-color">
             <a class="text-color" href="https://www.facebook.com/profile.php?id=61550751631784" target="_blank"
               rel="noopener" aria-label="Visit our Facebook page"><i
