--- a/static/css/base.css
+++ b/static/css/base.css
@@ -344,14 +344,20 @@ footer {
 }
 
 /* mailchimp */
+#mc_embed_shell {
+    text-align: center;
+}
+
 #mc_embed_signup {
     background: #fff;
-    false;
-    clear: left;
+    text-align: left;
     font: 14px Helvetica, Arial, sans-serif;
     width: 600px;
 }
 
+#mc-embedded-subscribe-form {
+    display: inline-block;
+}
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
