--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -2,7 +2,7 @@
 
 <footer class="footer bg-white">
     <hr>
-    <div class="text-center">
+    <div class="col-12 text-center">
         <div class="text-muted text-color">
             <p class="mx-2">Get exclusive offers and discount codes by subscribing to our monthly newsletter</p>
 
@@ -57,6 +57,12 @@
                 aria-label="Visit our Instagram page "><i class="fa-brands fa-instagram pl-2"></i></a>
             <a class="text-color" href="https://www.twitter.com" target="_blank" rel="noopener"
                 aria-label="Visit our Twitter page"><i class="fa-brands fa-twitter pl-2"></i></a>
+        </p>
+    </div>
+    <div class="col-12 text-center">
+        <p class="m-0 text-center text-color">
+            <a class="text-color" href="https://www.privacypolicygenerator.info/live.php?token=7LuZk8nCFXZkPX1eQEg9eVIsC7PBC3cv" 
+                target="_blank" aria-label="View privacy policy">Privacy Policy</a>
         </p>
     </div>
 </footer>
